--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 html, body {
-	height: 100%;
+	height: 1000px;
 	width: 100%;
 	margin: 0;
 	padding: 0;
@@ -22,126 +22,73 @@ p, span, a {
         -o-font-smoothing: antialiased;
 }
 
-.content {
-  display: table;
-  width: 100%;
-  height: 100%;
+.intro {
   position: absolute;
-  z-index: 1;
-  min-height: 300px;
-}
-
-.center-it {
-  text-align: center;
-  display: table-cell;
-  vertical-align: middle;
-  max-width: 90%;
-}
-
-.center-it h1 {
-	font-size: 4rem;
-	font-weight: 700;
-	color: #ffffff;
-}
-
-.video-container {
-	position: absolute;
-	display: block;
-  background: url('../images/bg.jpg') center center;
-  background-size: cover;
-  width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  -webkit-backface-visibility: hidden;
+  width: 100%;
+  overflow: hidden;
 }
 
-.touch .video-container {
-  display: none;
-}
-
-#bg-video {
-	position: absolute;
-  display: block;
-  min-height: 100%;
+.intro video { 
+  position: absolute;
+  z-index: -100;
+  min-height: 100vh;
   min-width: 100%;
-  top: 0;
-  right: 0;
-  z-index: 0;
-  overflow: hidden;
-}
-
-.lt-ie8 .video-container {
-  display: none;
-}
-
-.slides {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  position: relative;
-  overflow: hidden;
-}
-
-.slides li {
-	position: absolute;
-  display: none;
-  width: 100%;
-  left: 0;
-  top: 0;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-}
-
-.slides li:first-child {
-  position: relative;
-  display: block;
-  float: left;
-}
-
-.slides {
-  display: none;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 0;
-}
-
-.slides .slide {
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: static;
-  top: 0px;
-  left: 0px;
-  z-index: 100;
-  background-repeat: no-repeat;
+  height: auto;
+  width: auto;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  background: url('../images/bg.jpg') no-repeat center center;
   background-size: cover;
 }
 
-.touch .slides,
-.novideo .slides,
-.lt-ie8 .slides {
-  display: block;
+@media screen and (max-width: 800px) {
+  .intro { 
+    background: url('../images/bg.jpg') #000000 no-repeat center center; 
+    background-position: absolute;
+    background-size: cover;
+  }
+  #bgvid { 
+    display: none; 
+  }
 }
 
-.touch .slides .slide1,
-.novideo .slides .slide1,
-.lt-ie8 .slides .slide1 {
-  background-image: url('../images/slide-one-bg.png');
+.feature {
+  height: 100%;
+  width: 95%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
 
-.touch .slides .slide2,
-.novideo .slides .slide2,
-.lt-ie8 .slides .slide2 {
-  background-image: url('../images/slide-two-bg.png');
+.feature h1 {
+  font-size: 3.5rem;
+  letter-spacing: -0.1rem;
+  font-weight: 700;
+  text-align: center;
+  color: #ffffff;
 }
 
-.touch .slides .slide3,
-.novideo .slides .slide3,
-.lt-ie8 .slides .slide3 {
-  background-image: url('../images/slide-three-bg.png');
+@media screen and (min-width: 800px) {
+  .feature {
+    max-width: 800px;
+  }
+  .feature h1 {
+    font-size: 5rem;
+  }
 }
+
+@media screen and (min-width: 1200px) {
+  .feature {
+    max-width: 1000px;
+  }
+  .feature h1 {
+    font-size: 7rem;
+  }
+}
+
+
+
+
