module border color edits

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,7 +136,7 @@ header img {
   margin: 2.5rem 0;
   padding: 2.5rem 1.5rem;
   border-radius: .6rem;
-  border: 1px solid #eee;
+  border: 1px solid #bababa;
 }
 
 .the-assets h2 {
