--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -5,6 +5,12 @@
   margin-left: auto;
   margin-right: auto;
 }
+@media screen and (min-width: 992px) {
+  .container {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+}
 .row {
   margin-left: -1.5rem;
   margin-right: -1.5rem;
