team section margin

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,6 +196,10 @@ header img {
 /*-----------------
      the team
 -----------------*/
+.team {
+  margin-bottom: 7.5rem;
+}
+
 .team h2 {
   padding-bottom: 2.5rem;
   font-size: 3rem;
