--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -133,11 +133,11 @@ header img {
 
 #video {
 	width: 100%;
-	margin: 5rem 0;
+	margin: 1.5rem 0;
 }
 
 .module {
-  margin: 2.5rem 0;
+  margin: 2.5rem 0 5rem;
   padding: 2.5rem 1.5rem;
   border-radius: .6rem;
   border: 1px solid #bababa;
@@ -192,11 +192,29 @@ header img {
 
 
 /*-----------------
-     the team
+    the vids
 -----------------*/
-.team {
+.vids {
   margin-bottom: 7.5rem;
 }
+
+.vids h2 {
+  padding-top: 5rem;
+  font-size: 3rem;
+  font-weight: 700;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .vids h2 {
+    font-size: 4.5rem;
+  }
+}
+
+
+/*-----------------
+     the team
+-----------------*/
 
 .team h2 {
   padding-bottom: 2.5rem;
