--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,8 +144,8 @@ header img {
 }
 
 .the-assets h2 {
-  padding-bottom: 2.5rem;
-  font-size: 3rem;
+  padding-bottom: 1.5rem;
+  font-size: 2.5rem;
   font-weight: 700;
   text-align: center;
 }
@@ -162,9 +162,13 @@ header img {
   color: #ffffff;
 }
 
+.vid-title {
+  padding-top: 3.5rem;
+}
+
 @media screen and (min-width: 1200px) {
   .the-assets h2 {
-    font-size: 4.5rem;
+    font-size: 3rem;
   }
   .the-assets p {
     font-size: 2.5rem;
@@ -194,31 +198,19 @@ header img {
 /*-----------------
     the vids
 -----------------*/
-.vids {
-  margin-bottom: 7.5rem;
-}
 
-.vids h2 {
-  padding-top: 5rem;
-  font-size: 3rem;
-  font-weight: 700;
-  text-align: center;
-}
-
-@media screen and (min-width: 1200px) {
-  .vids h2 {
-    font-size: 4.5rem;
-  }
-}
 
 
 /*-----------------
      the team
 -----------------*/
+.team {
+  margin-bottom: 7.5rem;
+}
 
 .team h2 {
   padding-bottom: 2.5rem;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 700;
   text-align: center;
 }
@@ -241,7 +233,7 @@ header img {
 
 @media screen and (min-width: 1200px) {
   .team h2 {
-    font-size: 4.5rem;
+    font-size: 3rem;
   }
   .team p {
     font-size: 2.5rem;
